--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
-    "svg-captcha": "^1.4.0"
+    "redis": "^4.7.0",
+    "svg-captcha": "^1.4.0",
+    "uuid": "^11.0.5"
   }
 }
