--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "redis": "^4.7.0",
     "svg-captcha": "^1.4.0",
