Asp.Net Web Api almost ready. I ne dimplement adding messages to an array of contacts.

--- a/MessageFormAPI/MessageFormAPI.API/MessageFormAPI.API.csproj
+++ b/MessageFormAPI/MessageFormAPI.API/MessageFormAPI.API.csproj
@@ -7,7 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Новая папка\**" />
+    <Content Remove="Новая папка\**" />
+    <EmbeddedResource Remove="Новая папка\**" />
+    <None Remove="Новая папка\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessageFormAPI.Application\MessageFormApi.Application.csproj" />
+    <ProjectReference Include="..\MessageFormAPI.Domain\MessageFormApi.Domain.csproj" />
+    <ProjectReference Include="..\MessageFormAPI.Infrastructure\MessageFormApi.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
