--- a/MessageFormAPI/MessageFormAPI.API/appsettings.json
+++ b/MessageFormAPI/MessageFormAPI.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=MessageFormDB;Username=postgres;Password=123"
+  }
 }
