--- a/MessageFormAPI/MessageFormAPI.Application/MessageFormAPI.Application.csproj
+++ b/MessageFormAPI/MessageFormAPI.Application/MessageFormAPI.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessageFormAPI.Domain\MessageFormApi.Domain.csproj" />
+    <ProjectReference Include="..\MessageFormAPI.Infrastructure\MessageFormApi.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
