--- a/MessageFormAPI/MessageFormAPI.API/MessageFormAPI.API.csproj
+++ b/MessageFormAPI/MessageFormAPI.API/MessageFormAPI.API.csproj
@@ -14,6 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Data\themes.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Data\themes.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
@@ -22,7 +30,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-    
+	
   </ItemGroup>
 
   <ItemGroup>
