--- a/softrust-app/angular.json
+++ b/softrust-app/angular.json
@@ -9,7 +9,7 @@
         "@schematics/angular:component": {
           "inlineStyle": false,
           "style": "css",
-          "skipTests": false
+          "skipTests": true
         },
         "@schematics/angular:class": {
           "skipTests": true
@@ -45,14 +45,14 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
+            "inlineStyleLanguage": "css",
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -112,5 +112,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
