Everything is done

--- a/MessageFormAPI/MessageFormAPI.API/appsettings.json
+++ b/MessageFormAPI/MessageFormAPI.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=MessageFormDB;Username=postgres;Password=123"
+    "DefaultConnection": "Host=localhost;Database=MessageFormDB;Username=<Username>;Password=<Password>"
   }
 }
